fix overflow in chat list

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -35,6 +35,7 @@
   margin-right: 1vw;
   float: left;
   border: solid #E0E0E0 3px;
+  overflow: hidden;
 }
 
 .chat-window {
